Updated Java version
* Changed deprecated methods